Fix extra space at bottom of pages

--- a/style.css
+++ b/style.css
@@ -244,7 +244,7 @@ blockquote p {
 .container {
 	max-width: 820px;
 	margin: auto;
-	padding: 48px 10px 80px 10px;
+	padding: 48px 10px 64px 10px;
 }
 
 #header {
@@ -302,7 +302,7 @@ blockquote p {
 
 .card {
 	text-align: left;
-	margin: 20px 10px 0 10px;
+	margin: 20px 10px;
 	background-color: #121212;
 	border-radius: 8px;
 	overflow: hidden;
@@ -586,7 +586,7 @@ input[type='text'] {
 }
 
 #page_navigation {
-	margin: 20px 0 5px 0;
+	margin: 20px 10px;
 	text-align: center;
 }
 
@@ -680,15 +680,18 @@ ul.children {
 		position: absolute;
 	}
 	.container {
-		padding: 0 0 80px 0;
+		padding: 0 0 64px 0;
 	}
 	.card {
-		margin: 12px 10px 0 10px;
+		margin: 12px 10px;
 	}
 	.error span {
 		font-size: 72px;
 	}
 	.cardimage {
 		height: 130px;
+	}
+	#page_navigation {
+		margin: 12px 10px;
 	}
 }
